// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Self referencing type 1`] = `"Currently do not support self-referencing types: m1"`;

exports[`attempted import 1`] = `"Failed to parse file entirely: {\\"dir\\":\\"\\",\\"name\\":\\"conduit_a.cdt\\",\\"fullname\\":\\"conduit_a.cdt\\"}"`;

exports[`dependency multi file 1`] = `
Object {
  "namespace": Object {
    "inScope": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 2,
                "startColNumber": 16,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 3,
                "startColNumber": 16,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
      },
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "namespace": Object {
    "inScope": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 2,
                "startColNumber": 16,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 3,
                "startColNumber": 16,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "sub/",
          "fullname": "sub/conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
      },
      "D" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 3,
                "startColNumber": 15,
                "startLineNumber": 2,
              },
              "name": "my_m2",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_d.cdt",
          "name": "conduit_d.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 15,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "D",
      },
      "m3" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 4,
                "startColNumber": 16,
                "startLineNumber": 3,
              },
              "name": "m1",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 5,
                "startColNumber": 0,
                "startLineNumber": 5,
              },
              "name": "m2",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "sub/",
          "fullname": "sub/conduit_c.cdt",
          "name": "conduit_c.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 3,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m3",
      },
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;

exports[`function with invalid return type 1`] = `
"Unable to parse required ReturnTypeSpec entity at {\\"startColNumber\\":0,\\"startLineNumber\\":0,\\"endColNumber\\":17,\\"endLineNumber\\":2}

  SomeType {
    }
  "
`;

exports[`function with type return returns none 1`] = `
"Unable to parse required ReturnTypeSpec entity at {\\"startColNumber\\":5,\\"startLineNumber\\":4,\\"endColNumber\\":17,\\"endLineNumber\\":6}

  SomeType {
    }
  "
`;

exports[`function with unknown types 1`] = `"Unable to find end of entity for UnaryParameter at , b: Foreign.Type) {"`;

exports[`function with void returns type 1`] = `"Returning [a] which is of type SomeType but expected void return"`;

exports[`simple echo function 1`] = `
Object {
  "namespace": Object {
    "inScope": Map {
      "Shout" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 3,
                "startColNumber": 19,
                "startLineNumber": 2,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 19,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "Shout",
      },
      "echo" => Object {
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Function",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 6,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "echo",
        "part": Object {
          "FunctionBody": Object {
            "children": Object {
              "Statement": Array [
                Object {
                  "differentiate": [Function],
                  "kind": "Statement",
                },
              ],
            },
            "kind": "FunctionBody",
            "loc": Object {
              "endColNumber": 35,
              "endLineNumber": 6,
              "startColNumber": 33,
              "startLineNumber": 6,
            },
          },
          "Parameter": Object {
            "differentiate": [Function],
            "kind": "Parameter",
          },
          "ReturnTypeSpec": Object {
            "differentiate": [Function],
            "kind": "ReturnTypeSpec",
          },
        },
      },
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [
      Object {
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Function",
        "loc": Object {
          "endColNumber": 17,
          "endLineNumber": 6,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "echo",
        "part": Object {
          "FunctionBody": Object {
            "children": Object {
              "Statement": Array [
                Object {
                  "differentiate": [Function],
                  "kind": "Statement",
                },
              ],
            },
            "kind": "FunctionBody",
            "loc": Object {
              "endColNumber": 35,
              "endLineNumber": 6,
              "startColNumber": 33,
              "startLineNumber": 6,
            },
          },
          "Parameter": Object {
            "differentiate": [Function],
            "kind": "Parameter",
          },
          "ReturnTypeSpec": Object {
            "differentiate": [Function],
            "kind": "ReturnTypeSpec",
          },
        },
      },
    ],
    "kind": "public",
  },
}
`;

exports[`simple multi file 1`] = `
Object {
  "namespace": Object {
    "inScope": Map {
      "m1" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 2,
                "startColNumber": 16,
                "startLineNumber": 1,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_a.cdt",
          "name": "conduit_a.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 1,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m1",
      },
      "m2" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 3,
                "startColNumber": 16,
                "startLineNumber": 2,
              },
              "name": "d",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 2,
          "startColNumber": 0,
          "startLineNumber": 0,
        },
        "name": "m2",
      },
      "m3" => Object {
        "children": Object {
          "Field": Array [
            Object {
              "isRequired": true,
              "kind": "Field",
              "loc": Object {
                "endColNumber": 8,
                "endLineNumber": 6,
                "startColNumber": 16,
                "startLineNumber": 5,
              },
              "name": "m",
              "part": Object {
                "FieldType": Object {
                  "differentiate": [Function],
                  "kind": "FieldType",
                },
              },
            },
          ],
        },
        "file": FileLocation {
          "dir": "",
          "fullname": "conduit_b.cdt",
          "name": "conduit_b.cdt",
        },
        "kind": "Message",
        "loc": Object {
          "endColNumber": 16,
          "endLineNumber": 5,
          "startColNumber": 5,
          "startLineNumber": 4,
        },
        "name": "m3",
      },
    },
    "name": "default",
  },
  "service": Object {
    "functions": Array [],
    "kind": "public",
  },
}
`;
